# socketioxide-benchmark

./: Cargo.toml  README.md  k6-fastwebsockets.js  k6-socketioxide.js
test-fastwebsockets/: Cargo.toml
test-fastwebsockets/src/: main.rs
test-socket.io/: main.js  package-lock.json  package.json
test-socketioxide/: Cargo.toml
test-socketioxide/src/: main.rs
utils/: Cargo.toml
utils/src/: lib.rs
