[package]
name = "test-fastwebsockets"
version = "0.1.0"
edition = "2021"

[dependencies]
utils = { path = "../utils" }
hyper = { version = "1.5.2" , features = ["server", "http1"]}
hyper-util = { version="0.1.10", features = ["tokio"] }
tokio = { version="1.43.0", features = ["rt-multi-thread", "macros"] }
fastwebsockets = { version = "0.10.0", features = ["simdutf8", "upgrade"] }
http-body-util = "0.1.2"
mimalloc = "0.1.43"
