[package]
name = "test-socketioxide"
version = "0.1.0"
edition = "2021"

[dependencies]
utils = { path = "../utils" }
hyper = { version = "1.5.2" , features = ["server", "http1"]}
hyper-util = { version="0.1.10", features = ["tokio"] }
socketioxide = { version = "0.16.0", features = ["tracing"] }
tokio = { version="1.43.0", features = ["rt-multi-thread", "macros"] }
rmpv = { version = "1.3.0", features = ["with-serde"] }
mimalloc = "0.1.43"
